...
  checkEmailText: 'Please check your e-mail',
  checkEmailDescText:
    'We have sent you an email with a link to reset your password. It may take a few minutes for you to receive it.',
  signTerms:
    "By continuing you agree to Towny's Terms of Service, We will manage information about you as described in our PrivacyPolicy and Cookie Policy.",
  resetText: 'Reset your password.',
  nextTitle: 'NEXT',
  emailNotRegisterd: 'This email is not registered.',
  varificationLinkSend: 'Verification email was sent successfully.',
  deactivateTitle: 'DEACTIVATE ACTIVITY',
  deactivateAccountTitle: 'DEACTIVATE MY ACCOUNT',
  terminateAccount: 'TERMINATE ACCOUNT',
  pauseTeam: 'PAUSE TEAM',
...
  cancelRequestTitle: 'CANCEL REQUEST',
  confirmAndPayTitle: 'CONFIRM AND PAY',
  applyTitle: 'APPLY',
  cancelTitle: 'CANCEL',
  reservTitle: 'RESERVE',
  sendInviteTitle: 'SEND INVITE TO CHALLENGE',
  doneTitle: 'DONE',
  saveTitle: 'SAVE',
  moveTitle: 'MOVE',
  loginCapTitle: 'LOGIN',
  continueCapTitle: 'CONTINUE',
  signUpCapitalText: 'SIGN UP',
  fnameText: 'First Name',
...
