...
  sportTypeTeam: 'team',

  countTypeRatio: 'Ratio',
  countTypeSets: 'Sets',
  countTypeTime: 'Time',
  requestVerb: 'request',
  menuOptionTypePlaying: 'Playing',
  menuOptionTypeRefereeing: 'Refereeing',
  menuOptionTypeScorekeeping: 'Scorekeeping',

  PRIVACY_GROUP_MEMBER_EVERYONE: 0,
  PRIVACY_GROUP_MEMBER_FOLLOWER: 1,
  PRIVACY_GROUP_MEMBER_TEAMMEMBERS: 2,
...
